build: update options for JVM 10+ (#1)